--- a/src/components/Landing/ResourcesAndStories/resourcesandstories.module.css
+++ b/src/components/Landing/ResourcesAndStories/resourcesandstories.module.css
@@ -125,7 +125,7 @@
 	cursor: pointer;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 425px) {
 	.container {
 		width: 100%;
 		margin-top: 5vh;
@@ -137,6 +137,11 @@
 	.column {
 		width: 100%;
 	}
+
+	.column:nth-child(2) > .grid {
+		display: none;
+	}
+
 	.horizontalCard,
 	.verticalCard {
 		background-position: center;
