--- a/src/components/common/HeroCarousel/herocarousel.module.css
+++ b/src/components/common/HeroCarousel/herocarousel.module.css
@@ -1,29 +1,17 @@
-/* .container:after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-image: url('/clips/heroclip.svg');
-	background-position: bottom;
-	background-repeat: no-repeat;
-	transform: translateY(1vh);
-} */
-
 .container {
 	height: 100vh;
+	max-height: 825px;
 	width: 100%;
 }
 
 .container img {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 }
 
 .content {
-	margin-top: 20vh;
-	margin-left: 5vw;
+	margin-top: 165px;
+	margin-left: 4rem;
 	position: absolute;
 	width: 40%;
 }
@@ -33,7 +21,7 @@
 	color: var(--white);
 	font-size: 3rem;
 	font-weight: bold;
-	margin-bottom: 2vh;
+	margin-bottom: 1.5rem;
 }
 
 .data {
@@ -41,8 +29,8 @@
 	font-family: 'Muli';
 	font-weight: 600;
 	font-size: 1.5rem;
-	line-height: 4vh;
-	margin-bottom: 3vh;
+	line-height: 2.3rem;
+	margin-bottom: 2rem;
 	text-align: left;
 }
 
@@ -56,7 +44,7 @@
 	font-size: 1.2rem;
 	background-color: var(--secondary);
 	border-radius: 10px;
-	height: 5vh;
+	height: 41.25px;
 	width: 12vw;
 	cursor: pointer;
 }
