--- a/src/components/common/Navbar/navbar.module.css
+++ b/src/components/common/Navbar/navbar.module.css
@@ -2,13 +2,13 @@
 	position: absolute;
 	z-index: 1;
 	height: 10vh;
-	width: 100%;
+	max-height: 82.5px;
+	width: 100vw;
 	display: flex;
 	flex: 1;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-
 	background-image: linear-gradient(
 		to bottom,
 		#ffffff 15%,
@@ -21,8 +21,9 @@
 }
 
 .brand {
-	margin-left: 3vw;
+	margin-left: 2.5rem;
 	height: 7vh;
+	max-height: 7vh;
 	display: flex;
 	flex-direction: row;
 	align-self: flex-end;
